Add server port configuration to .env
Added PORT variable for server configuration.

--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ TARGET_CHAT_ID=
 # Har kuni 09:00 Toshkent vaqti
 CRON_TIME=0 9 * * *
 TZ=Asia/Tashkent
+
+# Server port (hosting uchun)
+PORT=5003
+# HOST=0.0.0.0
